<resources>
    <string name="app_name">OLM Offline</string>
    <string name="shg">SHG</string>
    <string name="cluster">Cluster</string>
    <string name="household">Member</string>
    <string name="login_user_name">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forget_password">Forgot Password ?</string>
    <string name="login_signin">Login</string>
    <string name="logout">Logout</string>
    <string name="update_success">Updated Successfully</string>
    <string name="update_activity_lbl">Update Activity</string>
    <string name="detail_view_no_of_goat_sold">No. of Goat Sold :</string>
    <string name="detail_view_no_of_buck_sold">No. of Kids Sold :</string>
    <string name="detail_view_income_generated">Gross Income Generated :</string>
    <string name="detail_view_no_of_goat_buy">No. of Goat Bought :</string>
    <string name="detail_view_no_of_buck_buy">No. of Kids Bought :</string>
    <string name="detail_view_expenditure_cost">Total Input Cost :</string>
    <string name="detail_view_no_of_goat_born">No. of Goat Born :</string>
    <string name="detail_view_no_of_buck_born">No. of Kids Born :</string>
    <string name="detail_view_no_of_goat_dead">No. of Goat Dead :</string>
    <string name="detail_view_no_of_buck_dead">No. of Kids Dead :</string>
    <string name="detail_view_no_of_goat_vaccinated">No. of Goat Vaccinated :</string>
    <string name="detail_view_no_of_buck_vaccinated">No. of Kids Vaccinated :</string>
    <string name="detail_view_goat_activity">Goatry Activity</string>
    <string name="detail_view_buck_activity">Goat Kids Activity</string>
    <string name="total">Total : </string>
    <string name="remark">Remarks</string>
    <string name="update">Update</string>
    <string name="select_month">Select a Month</string>
    <string name="regular_vaccination">Regular Vaccination </string>
    <string name="Rs">\u20B9</string>
    <string name="add_shg_activity">Add SHG Activity</string>
    <string name="add_hh_activity">Add Member Activity</string>
    <string name="add_clf_activity">Add CLF Activity</string>
    <string name="select_shg">Select SHG</string>
    <string name="no_of_households">No of Members</string>
    <string name="no_of_goat">No. of Goats</string>
    <string name="no_of_buck">No. of Kids</string>
    <string name="type_of_goat_shed">Type Of Goat Shed</string>
    <string name="base_capital_inr">Base Capital (INR)</string>
    <string name="commencement_date">Commencement Date</string>
    <string name="submit">SUBMIT</string>
    <string name="profiling">Profiling</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="training">Training</string>
    <string name="financial">Financial</string>
    <string name="attendance">Attendance</string>
    <string name="activity_management">Activity Management</string>
    <string name="financial_management">Financial Management</string>
    <string name="search">search</string>
    <string name="coming_soon">coming soon</string>
    <string name="regular_vaccination_and_deworming">Regular Vaccination and Deworming</string>
    <string name="income_in">Net Income in</string>
    <string name="avg_monthly_income_all_members">Avg. Monthly Income (All Members)</string>
    <string name="avg_monthly_income_shg">Avg. Monthly Income (SHG)</string>
    <string name="avg_monthly_income">Avg. Monthly Income</string>
    <string name="new_update">New Update</string>
    <string name="history">History</string>
    <string name="year">Year</string>
    <string name="no">No</string>
    <string name="internal">Internal</string>
    <string name="external">External</string>
    <string name="name_of_book_keeper">Name of Book Keeper</string>
    <string name="save">SAVE</string>
    <string name="disability">Disability<font fgcolor="#FF0000">*</font></string>
    <string name="religion">Religion<font fgcolor="#FF0000">*</font></string>
    <string name="gender">Gender<font fgcolor="#FF0000">*</font></string>
    <string name="pip_category">PIP category <font fgcolor="#FF0000">*</font></string>
    <string name="leader">Leader <font fgcolor="#FF0000">*</font></string>
    <string name="no_of_birds">No of Birds</string>
    <string name="select_cluster_name">Select Cluster</string>
    <string name="select_house_holds">Select Members</string>
    <string name="no_of_bird_sold">No. of Bird Sold :</string>
    <string name="no_of_bird_buy">No. of Bird Bought :</string>
    <string name="no_of_bird_born">No. of Bird Born:</string>
    <string name="no_of_bird_dead">No. of Bird Dead:</string>
    <string name="no_of_bird_vaccinated">No. of Bird Vaccinated:</string>
    <string name="no_of_birds_sold">No. of Birds Sold :</string>
    <string name="bird_activity">Bird Activity</string>
    <string name="no_of_birds_bought">No. of Birds Bought :</string>
    <string name="no_of_birds_born">No. of Birds Born:</string>
    <string name="no_of_birds_dead">No. of Birds Dead:</string>
    <string name="view_previous_month_details">View Previous Month Details</string>
    <string name="no_of_birds_lbl">No. of Birds</string>
    <string name="type_of_birds_shed">Type of Birds Shed</string>
    <string name="groups">Groups</string>
    <string name="individual">All Members</string>
    <string name="_0">0</string>
    <string name="n_a">N/A</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="new_registration">New Registration</string>
    <string name="overview">Overview</string>
    <string name="approvals">Approvals</string>
    <string name="month">Month</string>
    <string name="scheme">Scheme</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="reverted">Reverted</string>
    <string name="crpcm_pending_details">Pending Details</string>
    <string name="scheme_lbl">Select Scheme<font fgcolor="#FF0000">*</font></string>
    <string name="activity_lbl">Select Activity<font fgcolor="#FF0000">*</font></string>
    <string name="reporting_lbl">Reporting Level</string>
    <string name="select_type">Select Type<font fgcolor="#FF0000">*</font></string>
    <string name="location_information">Location Information</string>
    <string name="select_district">Select District<font fgcolor="#FF0000">*</font></string>
    <string name="select_block">Select Block<font fgcolor="#FF0000">*</font></string>
    <string name="select_grampanchayat">Select Grampanchayat<font fgcolor="#FF0000">*</font></string>
    <string name="select_village">Select Village<font fgcolor="#FF0000">*</font></string>
    <string name="shg_information">SHG Information</string>
    <string name="shg_name">SHG Name<font fgcolor="#FF0000">*</font></string>
    <string name="date_of_formation">Date of Formation <font fgcolor="#FF0000">*</font></string>
    <string name="shg_code">SHG Code<font fgcolor="#FF0000">*</font></string>
    <string name="shg_regd">SHG Registration<font fgcolor="#FF0000">*</font></string>
    <string name="shg_type">SHG Type<font fgcolor="#FF0000">*</font></string>
    <string name="date_of_cooption_revival_into_nrlm">Date of Cooption/Revival into NRLM <font fgcolor="#FF0000">*</font></string>
    <string name="promoted_by">Promoted By<font fgcolor="#FF0000">*</font></string>
    <string name="account_details">Account Details</string>
    <string name="bank">Bank <font fgcolor="#FF0000">*</font></string>
    <string name="bank_branch">Bank Branch<font fgcolor="#FF0000">*</font></string>
    <string name="sb_a_c_number">SB A/c Number<font fgcolor="#FF0000">*</font></string>
    <string name="date_of_account_opening">Date of Account Opening<font fgcolor="#FF0000">*</font></string>
    <string name="meeting_frequency">Meeting Frequency<font fgcolor="#FF0000">*</font></string>
    <string name="monthly_amount_of_saving_per_member">Monthly Amount of Saving per member<font fgcolor="#FF0000">*</font></string>
    <string name="basic_training_received">Basic Training Received</string>
    <string name="active_bank_loan_a_c_number">Active Bank Loan A/C Number<font fgcolor="#FF0000">*</font></string>
    <string name="amount_of_capital_subsidy_grant_received_prior_to_nrlm">Amount of Capital Subsidy/Grant received prior to NRLM:<font fgcolor="#FF0000">*</font></string>
    <string name="have_trained_book_keeper">Have Trained Book keeper<font fgcolor="#FF0000">*</font></string>
    <string name="create_shg_profile">Create SHG Profile</string>
    <string name="update_shg_profile">Update SHG Profile</string>
    <string name="add_a_member">Add A Member</string>
    <string name="member_name">Member Name<font fgcolor="#FF0000">*</font></string>
    <string name="father_husband_name">Father/Husband Name<font fgcolor="#FF0000">*</font></string>
    <string name="social_category">Social Category<font fgcolor="#FF0000">*</font></string>
    <string name="date_of_birth">Date Of Birth<font fgcolor="#FF0000">*</font></string>
    <string name="date_of_joining_in_shg">Date of joining in SHG <font fgcolor="#FF0000">*</font></string>
    <string name="education_level">Education Level <font fgcolor="#FF0000">*</font></string>
    <string name="a_c_no">A/c No <font fgcolor="#FF0000">*</font></string>
    <string name="enrolled_in_insurance_pmjjy">Enrolled in Insurance (PMJJY)</string>
    <string name="enrolled_in_insurance_pmsby">Enrolled in Insurance (PMSBY)</string>
    <string name="enrolled_in_insurance_others">Enrolled in Insurance (Others)</string>
    <string name="enrolled_in_insurance_apy">Enrolled in Insurance (APY)</string>
    <string name="aadhar_number">Aadhar Number <font fgcolor="#FF0000">*</font></string>
    <string name="mobile_no">Mobile No. <font fgcolor="#FF0000">*</font></string>
    <string name="aadhar_seeded_sb_a_c">Aadhar Seeded SB A/C</string>
    <string name="shg_member">SHG MEMBER</string>
    <string name="shg_list">SHG List</string>
    <string name="next">NEXT</string>
    <string name="send_for_approval">Send for Approval</string>
    <string name="goats">Goats : </string>
    <string name="bucks">Kids : </string>
    <string name="birds">Birds : </string>
    <string name="pending_">"Pending  "</string>
    <string name="update_member">Update Member</string>
    <string name="status">STATUS :</string>
    <string name="fingerlings_harvested_kg">Fingerlings Harvested (kg)<font fgcolor="#FF0000">*</font> :</string>
    <string name="table_size_fish_harvested_kg">Table Size Fish Harvested (Kg)<font fgcolor="#FF0000">*</font> :</string>
    <string name="fingerlings_sold_kg">Fingerlings Sold (Kg)<font fgcolor="#FF0000">*</font> :</string>
    <string name="table_size_fish_sold_kg">Table Size Fish Sold (Kg)<font fgcolor="#FF0000">*</font> :</string>
    <string name="total_no_of_fry_stocked">Total No. of Fry Stocked :</string>
    <string name="total_no_of_fingerlings_stocked">Total No. of Fingerlings Stocked :</string>
    <string name="total_no_of_yearlings_stocked">Total No. of Yearlings Stocked :</string>
    <string name="yearly_pond_cleaning_frequency">Yearly pond cleaning frequency</string>
    <string name="feeding_qty_for">Feeding Qty For:</string>
    <string name="fry_kg">Fry (kg)</string>
    <string name="change_language">Change language</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="change_mobile">Change Mobile No</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No</string>
    <string name="designation">Designation</string>
    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="gp">Grampanchayat</string>
</resources>