<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="@dimen/space_0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FAFAFA"
            android:elevation="@dimen/space_0"
            app:contentInsetStart="@dimen/space_0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <views.MonRegular
                    android:id="@+id/tv_toolbar_title_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <views.MonSemiBold
                    android:id="@+id/tv_cng_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/space_16"
                    android:text="@string/change_password" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar_settings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_32"
                android:src="@drawable/avatar" />

            <views.MonRegular
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginBottom="@dimen/space_8"
                android:text="" />


            <RelativeLayout
                android:id="@+id/rl_lang_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_16"
                android:visibility="visible">

                <views.MonBold
                    android:id="@+id/tv_change_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/space_16"
                    android:text="@string/change_language"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/space_16">


                    <views.MonRegular
                        android:id="@+id/tv_eng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/space_20"
                        android:text="English"
                        android:textColor="#FF3D00" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tv_eng" />


                    <views.MonRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/space_20"
                        android:layout_toEndOf="@+id/switch_language"
                        android:text="Odia"
                        android:textColor="#00909F" />

                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_32"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_8"
                    android:layout_marginEnd="@dimen/space_4"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:enabled="false"
                        android:hint="@string/first_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_4"
                    android:layout_marginEnd="@dimen/space_8"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:enabled="false"
                        android:hint="@string/last_name" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_8"
                    android:layout_marginEnd="@dimen/space_8"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:enabled="false"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <views.MonSemiBold
                    android:id="@+id/tv_cng_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/space_16"
                    android:text="@string/change_email"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_8"
                    android:layout_marginEnd="@dimen/space_8"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:enabled="false"
                        android:hint="@string/mobile" />
                </com.google.android.material.textfield.TextInputLayout>

                <views.MonSemiBold
                    android:id="@+id/tv_cng_mob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/space_16"
                    android:text="@string/change_mobile"
                    android:textSize="12sp" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_8"
                android:id="@+id/et_gp_til"
                android:visibility="visible">

                <EditText
                    android:id="@+id/et_gp_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_8">

                <EditText
                    android:id="@+id/et_designation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/designation" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_crpcm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_8"
                        android:layout_marginEnd="@dimen/space_8">

                        <EditText
                            android:id="@+id/et_dist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:enabled="false"
                            android:hint="@string/district" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_8"
                        android:layout_marginEnd="@dimen/space_8">

                        <EditText
                            android:id="@+id/et_block"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:enabled="false"
                            android:hint="@string/block" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_8"
                        android:layout_marginEnd="@dimen/space_8">

                        <EditText
                            android:id="@+id/et_gp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:enabled="false"
                            android:hint="@string/gp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_8"
                        android:layout_marginEnd="@dimen/space_8">

                        <EditText
                            android:id="@+id/et_village"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:enabled="false"
                            android:hint="Village" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <views.MonRegular
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/space_16"
            android:text="Logout"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>